--- a/package.json
+++ b/package.json
@@ -13,18 +13,17 @@
     "nodemon": "^2.0.15"
   },
   "repository": {
-    "type":"git",
-    "url": "https://github.com/HaseebUllahAbbasi/node_backend_public_template"
+    "type": "git",
+    "url": "https://github.com/HaseebUllahAbbasi/node_template"
   },
-  
   "devDependencies": {
     "nodemon": "^2.0.15"
   },
   "scripts": {
     "postinstall": "npx husky install",
     "start": "nodemon ./server.js",
-    "dev": "set NODE_ENV=DEVELOPMENT& nodemon ./server",
-    "prod": "set NODE_ENV=PRODUCTION& nodemon ./server"
+    "dev": "set NODE_ENV=DEVELOPMENT& nodemon src/server",
+    "prod": "set NODE_ENV=PRODUCTION& nodemon src/server"
   },
   "author": "",
   "license": "ISC"
