--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.2",
   "description": "",
   "bin": "./bin/cli.js",
-  "main": "index.js",
+  "main": "src/server.js",
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
