--- a/package.json
+++ b/package.json
@@ -4,11 +4,23 @@
   "description": "",
   "bin": "./bin/cli.js",
   "main": "src/server.js",
+  "engines": {
+    "node": ">=10"
+  },
+  "release": {
+    "branches": [
+      "main",
+      "development",
+      "patch"
+    ]
+  },
   "dependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "cors": "^2.8.5",
-    "body-parser": "^1.19.1",
     "mongoose": "^6.1.3",
     "nodemon": "^2.0.15"
   },
@@ -23,8 +35,12 @@
     "postinstall": "npx husky install",
     "start": "nodemon ./server.js",
     "dev": "set NODE_ENV=DEVELOPMENT& nodemon src/server",
-    "prod": "set NODE_ENV=PRODUCTION& nodemon src/server"
+    "prod": "set NODE_ENV=PRODUCTION& nodemon src/server",
+    "semantic-release": "semantic-release --debug"
   },
-  "author": "",
+  "files": [
+    "src"
+  ],
+  "author": "haseebullahabbasi",
   "license": "ISC"
 }
