--- a/.github/ci.yaml
+++ b/.github/ci.yaml
@@ -14,6 +14,14 @@ jobs:
   build:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Run lint
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.4.1
+      - run: npm install
+      - run: npm run lint
