--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "eslint-config-prettier": "^8.8.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.3",
     "nodemon": "^2.0.15"
@@ -29,18 +30,30 @@
     "url": "https://github.com/HaseebUllahAbbasi/node_template"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@babel/eslint-parser": "^7.21.3",
+    "eslint": "^8.38.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.1",
+    "nodemon": "^2.0.15",
+    "prettier": "2.8.7"
   },
   "scripts": {
     "postinstall": "npx husky install",
     "start": "nodemon ./server.js",
     "dev": "set NODE_ENV=DEVELOPMENT& nodemon src/server",
     "prod": "set NODE_ENV=PRODUCTION& nodemon src/server",
-    "semantic-release": "semantic-release --debug"
+    "semantic-release": "semantic-release --debug",
+    "lint": "eslint src  --ext .js --resolve-plugins-relative-to .",
+    "lint:fix": "npm run lint -- --fix",
+    "test:integration": "echo 'Not Defined Yet' ",
+    "prepare": "husky install"
   },
   "files": [
     "src"
   ],
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  },
   "author": "haseebullahabbasi",
   "license": "ISC"
 }
